update surefire and failsafe plugins