@@ -147,13 +147,19 @@
             <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.0.0-M5</version>
                 <!-- The latest surefire plugin (v2.20.1) will add java.se.ee by default which pulls in java.xml.bind, java.transaction, etc -->
                 <!-- https://maven.apache.org/surefire/maven-surefire-plugin/java9.html -->
 				<!-- we don't actually want all of java.se.ee so we overide the default args -->
-				<configuration>
-					<argLine>-XX:+IgnoreUnrecognizedVMOptions --add-modules=java.xml.bind --illegal-access=permit</argLine>
-				</configuration>
+<!--				<configuration>-->
+<!--					<argLine>-XX:+IgnoreUnrecognizedVMOptions &#45;&#45;add-modules=java.xml.bind &#45;&#45;illegal-access=permit</argLine>-->
+<!--				</configuration>-->
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M5</version>
             </plugin>
 
 			<plugin>
